# FinQ

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  routes.py
docs/: usage.md
service/: __init__.py
service/adapters/: __init__.py  crypto.py  stock.py
src/finq/: __init__.py  cli.py  service_adapters.py  service_registry.py
src/finq/ai_services/: __init__.py  base.py  forecasting.py  llm.py  ocr.py
src/finq/api/: __init__.py  auth.py  routes.py
tests/: test_adapters.py  test_api.py
