[project]
name = "finq"
version = "0.1.0"
description = "Financial question answering service"
readme = "README.md"
authors = [{name = "FinQ Team"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "langchain",
    "pydantic",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["service*"]
